dhall/tests/type-inference/failure/unit/WithInvalidOverrideA.txt
Type error: error: MustCombineRecord
 --> <current file>:1:1
  |
...
6 | { a = 1 } with a.b = 2
  | ^^^^^^^^^^^^^^^^^^^^^^ MustCombineRecord
  |
